# mkresume

./: .gitignore  app.py  license  pyproject.toml
src/: content.py  main.py  template.py
templates/: sample_resume.yml
templates/components/: base.html
templates/core/: base.css  base.html
templates/default/: template.jinja
templates/macros/: style.jinja
templates/styles/: base.css
