[tool.poetry]
name = "mkresume"
version = "0.1.0"
description = "Creates beautiful resume easily from markdown."
authors = ["Edwin Kys", "Febian"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkresume = "src:main"
